@@ -6,7 +6,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class NoteMapper {
@@ -14,7 +13,7 @@ public class NoteMapper {
     public List<Note> toNoteEntities(Collection<NoteDto> dtos) {
         return dtos.stream()
                 .map(this::toNoteEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Note toNoteEntity(NoteDto dto) {
@@ -27,8 +26,7 @@ public class NoteMapper {
 
     public List<NoteDto> toNoteDtos(Collection<Note> entities) {
         return entities.stream()
-                .map(this::toNoteDto)
-                .collect(Collectors.toList());
+                .map(this::toNoteDto).toList();
     }
 
     public NoteDto toNoteDto(Note entity) {
@@ -38,39 +36,4 @@ public class NoteMapper {
         dto.setContent(entity.getContent());
         return dto;
     }
-
-//    public List<NoteResponse> toNoteResponses(Collection<NoteDto> dtos) {
-//        return dtos.stream()
-//                .map(this::toNoteResponse)
-//                .collect(Collectors.toList());
-//    }
-//
-//    public NoteResponse toNoteResponse(NoteDto dto) {
-//        NoteResponse response = new NoteResponse();
-//        response.setId(dto.getId());
-//        response.setTitle(dto.getTitle());
-//        response.setContent(dto.getContent());
-//        return response;
-//    }
-//
-//    public List<NoteDto> requestsToNoteDtos(Collection<CreateNoteRequest> requests) {
-//        return requests.stream()
-//                .map(this::toNoteDto)
-//                .collect(Collectors.toList());
-//    }
-//
-//    public NoteDto toNoteDto(CreateNoteRequest request) {
-//        NoteDto dto = new NoteDto();
-//        dto.setTitle(request.getTitle());
-//        dto.setContent(request.getContent());
-//        return dto;
-//    }
-//
-//    public NoteDto toNoteDto(UUID id, UpdateNoteRequest request) {
-//        NoteDto dto = new NoteDto();
-//        dto.setId(id);
-//        dto.setTitle(request.getTitle());
-//        dto.setContent(request.getContent());
-//        return dto;
-//    }
 }
